src/tests/snapshots/fmtt__tests__format__abbr-3.snap
---
source: src/tests/format.rs
expression: "&latex_formatted"
---
I asked (emailed Prof. He Who Must Not Be Named and CCed Prof. YouKnowWho).
The former has a budget of 7500, and the latter 5000.
