src/tests/snapshots/fmtt__tests__format__gpt1-3.snap
---
source: src/tests/format.rs
expression: "&latex_formatted"
---
The department heads will convene at 3 P.M. to engage in
a comprehensive discussion regarding the second-quarter budget, and
it is imperative that you bring your identification card for seamless access;
subsequently, the Information Technology team is scheduled to
conduct a software demonstration at 4 P.M., with the esteemed presence of
Mr. Chief Executive Officer's beautiful personal assistant.

In preparation for the impending meeting, a thorough review of
the key performance indicators and return on
investment is requested before the designated time of the meeting
(which is set for 5 P.M.), and your prompt RSVP by
12 P.M. is kindly anticipated to ensure optimal (or at least as optimal as
possible) coordination for the arrival of the very important persons at 2 P.M.!
Furthermore, it is completely acceptable if you find yourself out of
the office during this period.
    Simultaneously,
    the Quality Assurance team is seeking your valuable input in relation to
    the user interface and user experience;
    your collaboration is essential before the end of the day.
    A brief touch-base is suggested before the close of business hours to
    synchronize efforts and align objectives for maximum efficiency?

Meanwhile, the Research and Development team is deeply immersed in
the execution of a project shrouded in secrecy, with
the exact estimated time of arrival for the project launch yet to
be determined!
Additionally, the Human Resources department requires your date of birth for
the forthcoming birthday celebration, an event exclusively reserved for
individuals of paramount importance, and your immediate response for
attendance is highly encouraged. Enjoy the festivities!
